--- a/package.json
+++ b/package.json
@@ -3,5 +3,19 @@
   "version": "1.0.0",
   "main": "index.js",
   "author": "Dillon Hammer",
-  "license": "MIT"
+  "license": "MIT",
+  "type": "module",
+  "scripts": {
+    "scrape": "tsc && node build/scraper.js && prettier --write . --loglevel=error"
+  },
+  "dependencies": {
+    "axios": "^0.21.4",
+    "delay": "^5.0.0",
+    "dotenv": "^10.0.0",
+    "p-map": "^5.1.0"
+  },
+  "devDependencies": {
+    "@types/node": "^18.6.4",
+    "typescript": "^4.7.4"
+  }
 }
